--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 				<section> 
 					<h2>11th Hellenic Conference on Artificial Intelligence</h2>
 				    <h3>(SETN 2020)</h3>
+					
+					<aside class="notes">
+						Shhh, these are your private notes 📝
+  				</aside>
 				</section>
 
 				<section data-markdown style="font-size: .55em;">
