--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 			<div class="slides">
 				
 				<section> 
-					<h2>11th Hellenic Conference on Artificial Intelligence</h2>
+					<h2 class="gold">Datasets and Performance Metrics for Greek Named Entity Recognition</h2>
+					<h4>11th Hellenic Conference on Artificial Intelligence</h4>
 				    <h3>(SETN 2020)</h3>
 					
 					<aside class="notes">
