--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					
 					<h2 class="gold">Datasets and Performance Metrics for Greek Named Entity Recognition</h2>
 					<h4 class="lightblue">11th Hellenic Conference on Artificial Intelligence</h4>
-				    <h3>(SETN 2020)</h3>
+				    <h4>(SETN 2020)</h4>
 				    <div class="authors">
 						<p><a href="#">Nikos Bartziokas</a>, Aristotle University of Thessaloniki</p>
 						<p><a href="#">Thanassis Mavropoulos</a>, Aristotle University of Thessaloniki</p>
@@ -35,7 +35,8 @@
 				 
 				  <script type="text/template">
 
-## Example of annotation and boundary tagging schemes (BILOU, IOBES, IOB2)
+## Example of annotation and boundary tagging <!-- .element: class="gold" -->
+### schemes (BILOU, IOBES, IOB2)  <!-- .element: class="lightblue" -->
 | Token-GR  | BILOU | IOBES | IOB2 | Token-EN |
 | --------- | ----- | ----- | ----- | ------- |	
 | Ο         | O     | O     | O     | na      | 
@@ -56,101 +57,101 @@
 				</section>
 
 				<section>
- <section>
- <h2 class="gold">Examples</h2>
-<div class="fragment" style="font-size: .55em;">
-<figure style="margin-bottom: 6rem" >
-<div class="entities" style="line-height: 2.5; direction: ltr">Από έρευνες σε οικίες και χώρους στην 
-<mark class="entity" style="background: #feca74; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    Κυψέλη
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">GPE</span>
-</mark>
- και στη 
-<mark class="entity" style="background: #feca74; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    Μύκονο
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">GPE</span>
-</mark>
- , βρέθηκαν και κατασχέθηκαν , ποσότητα κοκαΐνης βάρους 
-<mark class="entity" style="background: #e4e7d2; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    128,8 γραμμαρίων
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">QUANTITY</span>
-</mark>
- , κρυμμένη ακόμα και μέσα σε πρίζες στον τοίχο , ποσότητα ακατέργαστης κάνναβης βάρους 
-<mark class="entity" style="background: #e4e7d2; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    176 γραμμαρίων
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">QUANTITY</span>
-</mark>
- , 
-<mark class="entity" style="background: #e4e7d2; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    δύο
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">CARDINAL</span>
-</mark>
- αυτοκίνητα , 
-<mark class="entity" style="background: #e4e7d2; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    2.990 ευρώ
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">MONEY</span>
-</mark>
- , 
-<mark class="entity" style="background: #e4e7d2; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    έξι
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">CARDINAL</span>
-</mark>
- κινητά τηλέφωνα , 
-<mark class="entity" style="background: #e4e7d2; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    τρεις
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">CARDINAL</span>
-</mark>
- ζυγαριές ακριβείας , 
-<mark class="entity" style="background: #e4e7d2; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    τρία
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">CARDINAL</span>
-</mark>
- βιβλιάρια τραπεζών με ύψος καταθέσεων 
-<mark class="entity" style="background: #e4e7d2; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    22.778 ευρώ
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">MONEY</span>
-</mark>
- . </div>
-</figure>
-</div>
-</section>
+				 <section>
+				 <h2 class="gold">Examples</h2>
+				<div class="fragment" style="font-size: .55em;">
+				<figure style="margin-bottom: 6rem" >
+				<div class="entities" style="line-height: 2.5; direction: ltr">Από έρευνες σε οικίες και χώρους στην 
+				<mark class="entity" style="background: #feca74;">
+				    Κυψέλη
+				    <span>GPE</span>
+				</mark>
+				 και στη 
+				<mark class="entity" style="background: #feca74;">
+				    Μύκονο
+				    <span>GPE</span>
+				</mark>
+				 , βρέθηκαν και κατασχέθηκαν , ποσότητα κοκαΐνης βάρους 
+				<mark class="entity" style="background: #e4e7d2;">
+				    128,8 γραμμαρίων
+				    <span>QUANTITY</span>
+				</mark>
+				 , κρυμμένη ακόμα και μέσα σε πρίζες στον τοίχο , ποσότητα ακατέργαστης κάνναβης βάρους 
+				<mark class="entity" style="background: #e4e7d2;">
+				    176 γραμμαρίων
+				    <span>QUANTITY</span>
+				</mark>
+				 , 
+				<mark class="entity" style="background: #e4e7d2;">
+				    δύο
+				    <span>CARDINAL</span>
+				</mark>
+				 αυτοκίνητα , 
+				<mark class="entity" style="background: #e4e7d2;">
+				    2.990 ευρώ
+				    <span>MONEY</span>
+				</mark>
+				 , 
+				<mark class="entity" style="background: #e4e7d2;">
+				    έξι
+				    <span>CARDINAL</span>
+				</mark>
+				 κινητά τηλέφωνα , 
+				<mark class="entity" style="background: #e4e7d2;">
+				    τρεις
+				    <span>CARDINAL</span>
+				</mark>
+				 ζυγαριές ακριβείας , 
+				<mark class="entity" style="background: #e4e7d2;">
+				    τρία
+				    <span>CARDINAL</span>
+				</mark>
+				 βιβλιάρια τραπεζών με ύψος καταθέσεων 
+				<mark class="entity" style="background: #e4e7d2;">
+				    22.778 ευρώ
+				    <span>MONEY</span>
+				</mark>
+				 . </div>
+				</figure>
+				</div>
+				</section>
 
-<section>
-<div class="fragment" style="font-size: .55em;">
-<figure style="margin-bottom: 6rem">
-<div class="entities" style="line-height: 2.5; direction: ltr">
-<mark class="entity" style="background: #bfe1d9; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    Σάββατο 3/1
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">DATE</span>
-</mark>
- , 
-<mark class="entity" style="background: #bfe1d9; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    20:15
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">TIME</span>
-</mark>
- Q&amp;A με τον 
-<mark class="entity" style="background: #aa9cfc; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    Στέλιο Αποστολόπουλο
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">PERSON</span>
-</mark>
- , διευθυντή φωτογραφίας του 
-<mark class="entity" style="background: #f0d0ff; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    Dolphin Man
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">WORK_OF_ART</span>
-</mark>
- , και συζήτηση με το 
-<mark class="entity" style="background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;">
-    Περιοδικό Φωτογράφος
-    <span style="font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem">ORG</span>
-</mark>
- για την υποβρύχια φωτογράφιση . </div>
-</figure>
-</div>
-</section>
+				<section>
+				<div class="fragment" style="font-size: .55em;">
+				<figure style="margin-bottom: 6rem">
+				<div class="entities" style="line-height: 2.5; direction: ltr">
+				<mark class="entity" style="background: #bfe1d9;">
+				    Σάββατο 3/1
+				    <span>DATE</span>
+				</mark>
+				 , 
+				<mark class="entity" style="background: #bfe1d9;">
+				    20:15
+				    <span>TIME</span>
+				</mark>
+				 Q&amp;A με τον 
+				<mark class="entity" style="background: #aa9cfc;">
+				    Στέλιο Αποστολόπουλο
+				    <span>PERSON</span>
+				</mark>
+				 , διευθυντή φωτογραφίας του 
+				<mark class="entity" style="background: #f0d0ff;">
+				    Dolphin Man
+				    <span>WORK_OF_ART</span>
+				</mark>
+				 , και συζήτηση με το 
+				<mark class="entity" style="background: #7aecec;">
+				    Περιοδικό Φωτογράφος
+				    <span>ORG</span>
+				</mark>
+				 για την υποβρύχια φωτογράφιση . </div>
+				</figure>
+				</div>
+				</section>
 				</section>
 			
 				<section>
-				<h2>Evaluation</h2>
+				<h2 class="gold">Evaluation</h2>
 
 				</section>	
 
@@ -189,7 +190,7 @@
 
 
 				<section>
-					<h3>Occurrences per entity type in elNER-18 dataset</h3>
+					<h3>Occurrences per entity type in <span class="gold">elNER-18</span> dataset</h3>
 					<canvas class="stretch" data-chart="bar">
 					<!--
 					{
@@ -250,7 +251,7 @@
 
 				<section>
 					<h3>10-fold averaged performance metrics in % for NER
-in elNER-4.</h3>
+in <span class="gold">elNER-4</span>.</h3>
 					<div class="r-stack">
 					<canvas class="fragment fade-out" data-fragment-index="0" data-chart="bar">
 					<!--
@@ -406,7 +407,7 @@ in elNER-4.</h3>
 
 				<section>
 					<h3>10-fold averaged performance metrics in % for NER
-in elNER-18.</h3>
+in <span class="gold">elNER-18</span>.</h3>
 					<div class="r-stack">
 					<canvas class="fragment fade-out" data-fragment-index="0" data-chart="bar">
 					<!--
@@ -588,34 +589,34 @@ in elNER-18.</h3>
 							tooltips: {
 								labels: { fontColor: "#FFF" },
 							},
-							           scales: {
-                        xAxes: [{
-                            display: true,
-                            scaleLabel: {
-                                display: true,
-                                fontColor:'#FFF',
-                                fontSize:10
-                            },
-                            ticks: {
-                               fontColor: "white",
-                               fontSize: 14
-                              }
-                        }],
-                        yAxes: [{
-                            display: true,
-                            scaleLabel: {
-                                display: true,
-                                fontColor: '#FFF',
-                                fontSize:10
-                            },
-                            ticks: {
-                                  fontColor: "white",
-                                  fontSize: 14
-                            }
-                        }]
-                 }
+							scales: {
+		                        xAxes: [{
+		                            display: true,
+		                            scaleLabel: {
+		                                display: true,
+		                                fontColor:'#FFF',
+		                                fontSize:10
+		                            },
+		                            ticks: {
+		                               fontColor: "white",
+		                               fontSize: 14
+		                              }
+		                        }],
+		                        yAxes: [{
+		                            display: true,
+		                            scaleLabel: {
+		                                display: true,
+		                                fontColor: '#FFF',
+		                                fontSize:10
+		                            },
+		                            ticks: {
+		                                  fontColor: "white",
+		                                  fontSize: 14
+		                            }
+		                        }]
+		                 	}
 
-						}, 
+						}
 	
 					},
 					line: { borderColor: [ "rgba(20,220,220,.8)" , "rgba(220,120,120,.8)", "rgba(20,120,220,.8)" ], "borderDash": [ [5,10], [0,0] ] }, 
